# lbp-matcher

./: .gitignore  AverageHash.cpp  AverageHash.h  CMakeLists.txt  CONTRIBUTING  DifferenceHash.cpp  DifferenceHash.h  HashDistance.cpp  HashDistance.h  HistogramComparison.cpp  HistogramComparison.h  ImageHash.cpp  ImageHash.h  ImageSimilarity.cpp  LICENSE  PerceptualHash.cpp  PerceptualHash.h  README.md  README.txt  fileutil.cpp  leptonutil.cpp  leptonutil.h  main.cpp  types.h
src/: AverageHash.cpp  AverageHash.h  CMakeLists.txt  Clustering.cpp  Clustering.h  DifferenceHash.cpp  Extractor.cpp  Extractor.h  HashDistance.cpp  HashDistance.h  HistogramComparison.cpp  HistogramComparison.h  ImageHash.cpp  ImageHash.h  ImageSimilarity.h  LBPMatcher.cpp  LBPMatcher.h  LbpGenerator.cpp  LbpGenerator.hpp  Lenet.hpp  Predictor.cpp  Predictor.hpp  Segmenter.cpp  Segmenter.h  catch.hpp  fileutil.h  heatmap.cpp  heatmap.h  leptonutil.cpp  leptonutil.h  low.cpp  low.h  main.cpp  types.h  utils.hpp  version.h.in
src/generators/elbp/: Elbp.cpp  Elbp.hpp
src/generators/ilbp/: Ilbp.cpp  Ilbp.hpp
src/generators/lbp/: Lbp.cpp  Lbp.hpp
src/generators/slbp/: Slbp.cpp  Slbp.hpp
test-deck/: data.lst
test-deck/data/: lenet-0.params  lenet-1.params  lenet-2.params  lenet-3.params  lenet-4.params  lenet-5.params  lenet-6.params  lenet-7.params  lenet-8.params  lenet-9.params  lenet.json
test-deck/data/rec/: class_a.idx  class_a.lst  class_a.rec  query.idx  query.lst  query.rec
test-deck/private/: clip2.tif  clip3.tif
test-deck/private-2/: snippet-01.tif  snippet-02-300dpi.tif  snippet-02-96dpi32bit.tif  snippet-03-300dpi.tif  snippet-04-300dpi.tif  sub01-300dpi.tif  sub01.tif
